skills page and color changes

--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@
 
         <div class="project1 projects">
           <div class="project-image1">
-            <div></div>
+            <div class="coming-soon">
+              <div>COMING SOON</div>
+            </div>
           </div>
           <div class="link-box">
             <a href="#"><i class="git fab fa-github"></i></a>
@@ -237,7 +239,9 @@
         </div>
         <div class="project2 projects">
           <div class="project-image2">
-            <div></div>
+            <div class="coming-soon">
+              <div>COMING SOON</div>
+            </div>
           </div>
           <div class="link-box">
             <a href="#"><i class="git fab fa-github"></i></a>
@@ -250,7 +254,9 @@
         </div>
         <div class="project3 projects">
           <div class="project-image3">
-            <div></div>
+            <div class="coming-soon">
+              <div>COMING SOON</div>
+            </div>
           </div>
           <div class="link-box">
             <a href="#"><i class="git fab fa-github"></i></a>
@@ -276,7 +282,9 @@
         </div>
         <div class="project5 projects">
           <div class="project-image5">
-            <div></div>
+            <div class="coming-soon">
+              <div>COMING SOON</div>
+            </div>
           </div>
           <div class="link-box">
             <a href="#"><i class="git fab fa-github"></i></a>
@@ -290,7 +298,9 @@
         </div>
         <div class="project6 projects">
           <div class="project-image6">
-            <div></div>
+            <div class="coming-soon">
+              <div>COMING SOON</div>
+            </div>
           </div>
           <div class="link-box">
             <a href="#"><i class="git fab fa-github"></i></a>
@@ -304,7 +314,9 @@
         </div>
         <div class="project7 projects">
           <div class="project-image7">
-            <div></div>
+            <div class="coming-soon">
+              <div>COMING SOON</div>
+            </div>
           </div>
           <div class="link-box">
             <a href="#"><i class="git fab fa-github"></i></a>
@@ -318,7 +330,9 @@
         </div>
         <div class="project8 projects">
           <div class="project-image8">
-            <div></div>
+            <div class="coming-soon">
+              <div>COMING SOON</div>
+            </div>
           </div>
           <div class="link-box">
             <a href="#"><i class="git fab fa-github"></i></a>
@@ -348,12 +362,13 @@
     <div class="page_four">
       <div class="grid">
         <img class="logo" src="images/logo.png" alt="Personal Logo">
-        <h1 class="title1">Hi.</h1>
-        <h1 class="title2">my name is</h1>
-        <h1 class="title3">Bradley</h1>
-        <h1 class="title4"><span>Richardson.</span></h1>
-
-        <p class="intro">a current student at CoderAcademy in Melbourne.
+        <h1 class="title4"><span>Skills.</span></h1>
+        <div class="icon-wrapper">
+          <img src="images/ruby-original.svg" alt="" class="ruby-icon language-icons">
+          <img src="images/html5-original.svg" alt="" class="html-icon language-icons">
+          <img src="images/css3-original.svg" alt="" class="css-icon language-icons">
+        </div>
+        <p class="skill-paragraph">a current student at CoderAcademy in Melbourne.
           So happy to be <span>practicing</span> web technologies everyday</p>
       </div>
     </div>
