added media query to make font-size responsive

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
     <div class="navbar">
       <div class="item-wrapper">
         <div class="nav-items">
-          <p>Home</p>
-          <p>Projects</p>
-          <p>About Me</p>
+          <p>Home.</p>
+          <p>Projects.</p>
+          <p>About Me.</p>
+          <p>Skills.</p>
+          <p>Contact Me.</p>
         </div>
         <div class="links">
           <a href="#"><i class="fab fa-github"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
+
         </div>
       </div>
     </div>
@@ -370,6 +373,25 @@
         </div>
         <p class="skill-paragraph">a current student at CoderAcademy in Melbourne.
           So happy to be <span>practicing</span> web technologies everyday</p>
+      </div>
+    </div>
+    <div class="page_five">
+      <div class="grid">
+        <img class="logo" src="images/logo.png" alt="Personal Logo">
+        <h1 class="title3">Contact</h1>
+        <h1 class="title4"><span>Me.</span></h1>
+
+        <div class="intro">Thanks for viewing my <span>Portfolio.</span> You've reached the end, have a great day.</div>
+        <div class="contact-icons">
+          <a href="#">
+            <p class="icon3 icon3-text">resume</p>
+          </a>
+          <a href="#"><i class="fab fa-github icon3"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in icon3"></i></a>
+          <a href="#"><i class="fab fa-instagram icon3"></i></a>
+
+
+        </div>
       </div>
     </div>
   </div>
