adding responsive aspects on pages 2,3,4,5 also broke navbar

--- a/index.html
+++ b/index.html
@@ -17,21 +17,31 @@
     <div class="navbar">
       <div class="item-wrapper">
         <div class="nav-items">
-          <p>Home.</p>
-          <p>Projects.</p>
-          <p>About Me.</p>
-          <p>Skills.</p>
-          <p>Contact Me.</p>
+          <a href="#home">
+            <p>Home.</p>
+          </a>
+          <a href="#projects">
+            <p>Projects.</p>
+          </a>
+          <a href="#about_me">
+            <p>About Me.</p>
+          </a>
+          <a href="#skills">
+            <p>Skills.</p>
+          </a>
+          <a href="#contact_me">
+            <p>Contact Me.</p>
+          </a>
         </div>
         <div class="links">
           <a href="#"><i class="fab fa-github"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
-
         </div>
       </div>
     </div>
-    <div class="page_one">
+    <div class="page_one" id="home">
+      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
         <img class="logo" src="images/logo.png" alt="Personal Logo">
         <h1 class="title1">Hi.</h1>
@@ -43,16 +53,14 @@
           So happy to be <span>practicing</span> web technologies everyday</p>
       </div>
     </div>
-    <div class="page_two">
+    <div class="page_two" id="projects">
+      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
-
         <div class="overlay"></div>
         <h1 class='title1'><span>Things</span></h1>
         <h1 class='title2'>I've been</h1>
         <h1 class='title3'>Working</h1>
         <h1 class='title4'>On.</h1>
-
-
 
         <!-- Modal One -->
         <div class="modal">
@@ -348,11 +356,13 @@
         </div>
       </div>
     </div>
-    <div class="page_three">
+    <div class="page_three" id="about_me">
+      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
-        <h1 class='title1'>About</h1>
+        <h1 class='title1'><span>About</span></h1>
         <h1 class='title2'>Me.</h1>
-        <p class="intro">being immersieved and doing natural thing. Whether that swimming, hiking and cooking, fishing.
+        <p class="intro about-me-text">being immersieved and doing natural thing. Whether that swimming, hiking and
+          cooking, fishing.
           Anything that humans have done for a long time. i like talking about moral landscape and having discussion on
           morality and ethics. i like talking about conspiracy. i enjoy living forward and learning something different
           everyday. i love meditations, calm mind. i like hosting creating space for people to have fun. win sometimes.
@@ -362,10 +372,11 @@
         </div>
       </div>
     </div>
-    <div class="page_four">
+    <div class="page_four" id="skills">
+      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
         <img class="logo" src="images/logo.png" alt="Personal Logo">
-        <h1 class="title4"><span>Skills.</span></h1>
+        <h1 class="title1"><span>Skills.</span></h1>
         <div class="icon-wrapper">
           <img src="images/ruby-original.svg" alt="" class="ruby-icon language-icons">
           <img src="images/html5-original.svg" alt="" class="html-icon language-icons">
@@ -375,13 +386,15 @@
           So happy to be <span>practicing</span> web technologies everyday</p>
       </div>
     </div>
-    <div class="page_five">
+    <div class="page_five" id="contact_me">
+      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
         <img class="logo" src="images/logo.png" alt="Personal Logo">
         <h1 class="title3">Contact</h1>
         <h1 class="title4"><span>Me.</span></h1>
 
-        <div class="intro">Thanks for viewing my <span>Portfolio.</span> You've reached the end, have a great day.</div>
+        <div class="intro contact-me">Thanks for viewing my <span>Portfolio.</span> You've reached the end, have a great
+          day.</div>
         <div class="contact-icons">
           <a href="#">
             <p class="icon3 icon3-text">resume</p>
