added mobile navbar

--- a/index.html
+++ b/index.html
@@ -41,9 +41,36 @@
       </div>
     </div>
 
+    <div class="mobile-nav">
+      <div class="item-wrapper">
+        <div class="nav-items">
+          <a href="#home">
+            Home.
+          </a>
+          <a href="#projects">
+            Projects.
+          </a>
+          <a href="#about_me">
+            About Me.
+          </a>
+          <a href="#skills">
+            Skills.
+          </a>
+          <a href="#contact_me">
+            Contact Me.
+          </a>
+        </div>
+        <div class="links">
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+
     <div class="page_one" id="home">
-      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
+        <img class="logo-mobile1" src="images/logo.png" alt="Personal Logo">
         <img class="logo" src="images/logo.png" alt="Personal Logo">
         <h1 class="title1">Hi.</h1>
         <h1 class="title2">my name is</h1>
@@ -55,14 +82,13 @@
       </div>
     </div>
     <div class="page_two" id="projects">
-      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
+        <img class="logo-mobile2" src="images/logo.png" alt="Personal Logo">
         <div class="overlay"></div>
         <h1 class='title1'><span>Things</span></h1>
         <h1 class='title2'>I've been</h1>
         <h1 class='title3'>Working</h1>
         <h1 class='title4'>On.</h1>
-
         <!-- Modal One -->
         <div class="modal">
           <input class="modal-open" id="modal-one" type="checkbox" hidden>
@@ -358,15 +384,18 @@
       </div>
     </div>
     <div class="page_three" id="about_me">
-      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
+        <img class="logo-mobile3" src="images/logo.png" alt="Personal Logo">
         <h1 class='title1'><span>About</span></h1>
         <h1 class='title2'>Me.</h1>
         <p class="intro about-me-text">being immersieved and doing natural thing. Whether that swimming, hiking and
           cooking, fishing.
-          Anything that humans have done for a long time. i like talking about moral landscape and having discussion on
-          morality and ethics. i like talking about conspiracy. i enjoy living forward and learning something different
-          everyday. i love meditations, calm mind. i like hosting creating space for people to have fun. win sometimes.
+          Anything that humans have done for a long time. i like talking about moral landscape and having discussion
+          on
+          morality and ethics. i like talking about conspiracy. i enjoy living forward and learning something
+          different
+          everyday. i love meditations, calm mind. i like hosting creating space for people to have fun. win
+          sometimes.
         </p>
         <div class="photo">
           <img src="images/marius-ciocirlan-398931-unsplash.jpg" alt="">
@@ -374,8 +403,8 @@
       </div>
     </div>
     <div class="page_four" id="skills">
-      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
+        <img class="logo-mobile4" src="images/logo.png" alt="Personal Logo">
         <img class="logo" src="images/logo.png" alt="Personal Logo">
         <h1 class="title1"><span>Skills.</span></h1>
         <div class="icon-wrapper">
@@ -388,13 +417,14 @@
       </div>
     </div>
     <div class="page_five" id="contact_me">
-      <img class="logo-mobile" src="images/logo.png" alt="Personal Logo">
       <div class="grid">
+        <img class="logo-mobile5" src="images/logo.png" alt="Personal Logo">
         <img class="logo" src="images/logo.png" alt="Personal Logo">
         <h1 class="title3">Contact</h1>
         <h1 class="title4"><span>Me.</span></h1>
 
-        <div class="intro contact-me">Thanks for viewing my <span>Portfolio.</span> You've reached the end, have a great
+        <div class="intro contact-me">Thanks for viewing my <span>Portfolio.</span> You've reached the end, have a
+          great
           day.</div>
         <div class="contact-icons">
           <a href="#">
@@ -408,6 +438,9 @@
         </div>
       </div>
     </div>
+
+
+
   </div>
 </body>
 
