adding scroll feature to mobile page 2 - not refined at all

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       </div>
     </div>
 
+
+
     <div class="mobile-nav">
       <div class="item-wrapper">
         <div class="nav-items">
@@ -89,6 +91,132 @@
         <h1 class='title2'>I've been</h1>
         <h1 class='title3'>Working</h1>
         <h1 class='title4'>On.</h1>
+        <div class="scroll-container">
+          <div class="container">
+            <div class="project1 projects">
+              <div class="project-image1">
+                <div class="coming-soon">
+                  <div>COMING SOON</div>
+                </div>
+              </div>
+              <div class="link-box">
+                <a href="#"><i class="git fab fa-github"></i></a>
+                <label class="btn" for="modal-one">
+                  <div class="modal-linker">
+                    +
+                  </div>
+                </label>
+              </div>
+            </div>
+            <div class="project2 projects">
+              <div class="project-image2">
+                <div class="coming-soon">
+                  <div>COMING SOON</div>
+                </div>
+              </div>
+              <div class="link-box">
+                <a href="#"><i class="git fab fa-github"></i></a>
+                <label class="btn" for="modal-two">
+                  <div class="modal-linker">
+                    +
+                  </div>
+                </label>
+              </div>
+            </div>
+            <div class="project3 projects">
+              <div class="project-image3">
+                <div class="coming-soon">
+                  <div>COMING SOON</div>
+                </div>
+              </div>
+              <div class="link-box">
+                <a href="#"><i class="git fab fa-github"></i></a>
+                <label class="btn" for="modal-three">
+                  <div class="modal-linker">
+                    +
+                  </div>
+                </label>
+              </div>
+            </div>
+            <div class="project4 projects">
+              <div class="project-image4">
+                <img src="images/osrs_calc.png" alt="">
+              </div>
+              <div class="link-box">
+                <a href="https://github.com/timwaldron/osrs-calc"><i class="git fab fa-github"></i></a>
+                <label class="btn" for="modal-four">
+                  <div class="modal-linker">
+                    +
+                  </div>
+                </label>
+              </div>
+            </div>
+            <div class="project5 projects">
+              <div class="project-image5">
+                <div class="coming-soon">
+                  <div>COMING SOON</div>
+                </div>
+              </div>
+              <div class="link-box">
+                <a href="#"><i class="git fab fa-github"></i></a>
+                <label class="btn" for="modal-five">
+                  <div class="modal-linker">
+                    +
+                  </div>
+                </label>
+              </div>
+
+            </div>
+            <div class="project6 projects">
+              <div class="project-image6">
+                <div class="coming-soon">
+                  <div>COMING SOON</div>
+                </div>
+              </div>
+              <div class="link-box">
+                <a href="#"><i class="git fab fa-github"></i></a>
+                <label class="btn" for="modal-six">
+                  <div class="modal-linker">
+                    +
+                  </div>
+                </label>
+              </div>
+
+            </div>
+            <div class="project7 projects">
+              <div class="project-image7">
+                <div class="coming-soon">
+                  <div>COMING SOON</div>
+                </div>
+              </div>
+              <div class="link-box">
+                <a href="#"><i class="git fab fa-github"></i></a>
+                <label class="btn" for="modal-seven">
+                  <div class="modal-linker">
+                    +
+                  </div>
+                </label>
+              </div>
+
+            </div>
+            <div class="project8 projects">
+              <div class="project-image8">
+                <div class="coming-soon">
+                  <div>COMING SOON</div>
+                </div>
+              </div>
+              <div class="link-box">
+                <a href="#"><i class="git fab fa-github"></i></a>
+                <label class="btn" for="modal-eight">
+                  <div class="modal-linker">
+                    +
+                  </div>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!-- Modal One -->
         <div class="modal">
           <input class="modal-open" id="modal-one" type="checkbox" hidden>
