--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           </a>
         </div>
         <div class="links">
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://github.com/BradleyJrichardson"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/bradley-richardson-232b36177/"><i class="fab fa-linkedin-in"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
@@ -82,8 +82,8 @@
           </a>
         </div>
         <div class="links">
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://github.com/BradleyJrichardson"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/bradley-richardson-232b36177/"><i class="fab fa-linkedin-in"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
@@ -193,7 +193,7 @@
                 </div>
               </div>
               <div class="link-box">
-                <a href="#"><i class="git fab fa-github"></i></a>
+                <a href="https://github.com/BradleyJrichardson"><i class="git fab fa-github"></i></a>
                 <label class="btn" for="modal-six">
                   <div class="modal-linker">
                     +
@@ -209,7 +209,7 @@
                 </div>
               </div>
               <div class="link-box">
-                <a href="#"><i class="git fab fa-github"></i></a>
+                <a href="https://github.com/BradleyJrichardson"><i class="git fab fa-github"></i></a>
                 <label class="btn" for="modal-seven">
                   <div class="modal-linker">
                     +
@@ -225,7 +225,7 @@
                 </div>
               </div>
               <div class="link-box">
-                <a href="#"><i class="git fab fa-github"></i></a>
+                <a href="https://github.com/BradleyJrichardson"><i class="git fab fa-github"></i></a>
                 <label class="btn" for="modal-eight">
                   <div class="modal-linker">
                     +
@@ -520,7 +520,7 @@
             </div>
           </div>
           <div class="link-box">
-            <a href="#"><i class="git fab fa-github"></i></a>
+            <a href="https://github.com/BradleyJrichardson"><i class="git fab fa-github"></i></a>
             <label class="btn" for="modal-eight">
               <div class="modal-linker">
                 +
@@ -585,9 +585,6 @@
         </div>
       </div>
     </div>
-
-
-
   </div>
 </body>
 
